--- a/views/pages/privacy_policy.ejs
+++ b/views/pages/privacy_policy.ejs
@@ -11,13 +11,16 @@
   </head>
   <body>
     <div class="header">
-      <div class="upper-layer bg-warning pt-5 text-white text-center">
+      <div
+        style="background-color: #008080"
+        class="upper-layer pt-5 text-white text-center"
+      >
         <h1 class="m-0">Privacy Policy</h1>
       </div>
       <div class="wavy-bottom">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
           <path
-            fill="#ffc107"
+            fill="#008080"
             fill-opacity="1"
             d="M0,160L80,170.7C160,181,320,203,480,197.3C640,192,800,160,960,154.7C1120,149,1280,171,1360,181.3L1440,192L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"
           ></path>
@@ -81,21 +84,17 @@
         features, events, or content at any time without notice.
       </p>
 
-      <div class="warning p-2 alert alert-danger">
-        <h4 class="my-4">5. User Conduct</h4>
-        <div class="p-2">
-          <div>5.1. You must not:</div>
-          <ul>
-            <li>Harass, threaten, or abuse other players.</li>
-            <li>Use cheats, bots, or other unauthorized software.</li>
-            <li>Exploit bugs or glitches to gain unfair advantages.</li>
-          </ul>
-          <div>
-            5.2. Players who violate these rules may have their accounts
-            suspended or permanently banned.
-          </div>
-        </div>
-      </div>
+      <h3>5. User Conduct</h3>
+      <p>5.1. You must not:</p>
+      <ul>
+        <li>Harass, threaten, or abuse other players.</li>
+        <li>Use cheats, bots, or other unauthorized software.</li>
+        <li>Exploit bugs or glitches to gain unfair advantages.</li>
+      </ul>
+      <p>
+        5.2. Players who violate these rules may have their accounts suspended
+        or permanently banned.
+      </p>
 
       <h3>6. Purchases and Virtual Currency</h3>
       <p>
@@ -167,10 +166,10 @@
     <style>
       p {
         font-size: 1.2rem;
-        background: linear-gradient(45deg, #ffe4b326, #ff9b9b1c);
-        padding: 5px 10px;
+        background: linear-gradient(45deg, #0080800d, #0080801c);
+        padding: 10px;
         border-radius: 5px;
-        border: 2px solid #80808012;
+        border-left: 2px solid teal;
       }
 
       h3 {
