--- a/views/pages/privacy_policy.ejs
+++ b/views/pages/privacy_policy.ejs
@@ -180,6 +180,10 @@
         margin: 20px 0;
         margin-top: 40px;
       }
+
+      ::-webkit-scrollbar {
+        display: none;
+      }
     </style>
   </body>
 </html>
