--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -149,7 +149,7 @@
                 />
               </div>
               <div class="form-group mb-2">
-                <select class="form-control_v" id="citySelector">
+                <select class="form-control_v" id="citySelector" name="state">
                   <option value="">Choose State--</option>
                   <option value="Minnesota">Minnesota</option>
                   <option value="Alberta">Alberta</option>
