State saving during Register

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -196,7 +196,7 @@
 
             countries.forEach((country) => {
               $("#citySelector").append(
-                `<option value="${country}">${country}</option>`
+                `<option value="${country.name}">${country.name}</option>`
               );
             });
 
