--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -31,6 +31,7 @@
               <li data-link="users">Users</li>
               <li data-link="routes">Routes</li>
               <li data-link="maplist">Map List</li>
+              <li data-link="setting">Settings</li>
             </ul>
           </div>
         </div>
@@ -192,6 +193,45 @@
                 </thead>
                 <tbody class="map_list"></tbody>
               </table>
+            </div>
+            <div class="vj_dynamic setting">
+              <div class="container mt-4">
+                <div class="row">
+                  <div class="col-xl-6">
+                    <div class="card">
+                      <div class="card-header">
+                        <h3 class="text-center m-0">Provinces</h3>
+                      </div>
+                      <div class="card-body">
+                        <div class="province-container">
+                          <form
+                            class="provinceMaker m-0 p-0 mb-2 pb-2 border-bottom"
+                          >
+                            <div class="d-flex">
+                              <input
+                                type="text"
+                                class="form-control m-auto"
+                                placeholder="Engter Province Name"
+                                id="provinceName"
+                              />
+                              <button class="btn btn-warning ms-2">Save</button>
+                            </div>
+                          </form>
+                          <table class="table table-striped">
+                            <thead>
+                              <tr>
+                                <th>Name</th>
+                                <th>Action</th>
+                              </tr>
+                            </thead>
+                            <tbody class="province-table"></tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
