--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -15,6 +15,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css"
+    />
 
     <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
   </head>
@@ -59,8 +64,8 @@
               </div>
             </div>
             <div class="vj_dynamic users">
-              <div class="user-container">
-                <table class="table table-striped">
+              <div class="user-container mt-3">
+                <table class="table table-striped datatable user">
                   <thead>
                     <tr>
                       <th>Sr no.</th>
@@ -217,7 +222,7 @@
                               <button class="btn btn-warning ms-2">Save</button>
                             </div>
                           </form>
-                          <table class="table table-striped">
+                          <table class="table table-striped datatable province">
                             <thead>
                               <tr>
                                 <th>Name</th>
@@ -409,6 +414,11 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
+    ></script>
+    <script
+      type="text/javascript"
+      charset="utf-8"
+      src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"
     ></script>
   </body>
 </html>
