--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -65,6 +65,7 @@
             </div>
             <div class="vj_dynamic users">
               <div class="user-container mt-3">
+                <a href="/admin/export/users" class="myBtn">Export Excel</a>
                 <table class="table table-striped datatable user">
                   <thead>
                     <tr>
