--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -65,7 +65,9 @@
             </div>
             <div class="vj_dynamic users">
               <div class="user-container mt-3">
-                <a href="/admin/export/users" class="myBtn">Export Excel</a>
+                <div class="text-center text-md-start">
+                  <a href="/admin/export/users" class="myBtn">Export Excel</a>
+                </div>
                 <table class="table table-striped datatable user">
                   <thead>
                     <tr>
