Advanced Primary Map feature to retrieve it with ID

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -240,6 +240,23 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col-xl-6">
+                    <div class="card">
+                      <div class="card-header">
+                        <h3 class="m-0 text-center">Primary Map</h3>
+                      </div>
+                      <div class="card-body">
+                        <div class="primary-map-card">
+                          <p class="m-0 h5 text-center bg-light p-2 rounded-2">
+                            Calgary
+                          </p>
+                          <select
+                            class="form-select mt-2 primaryMapSelector"
+                          ></select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
