GUI to Change Primary Map

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -250,9 +250,12 @@
                           <p class="m-0 h5 text-center bg-light p-2 rounded-2">
                             Calgary
                           </p>
-                          <select
-                            class="form-select mt-2 primaryMapSelector"
-                          ></select>
+                          <div class="d-flex mt-3">
+                            <select
+                              class="form-select m-auto primaryMapSelector"
+                            ></select>
+                            <button class="btn btn-warning ms-2">Update</button>
+                          </div>
                         </div>
                       </div>
                     </div>
