Admin Change Primary MAPS

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -254,7 +254,12 @@
                             <select
                               class="form-select m-auto primaryMapSelector"
                             ></select>
-                            <button class="btn btn-warning ms-2">Update</button>
+                            <button
+                              class="btn btn-warning ms-2 primaryUpdateBtn"
+                              style="display: none"
+                            >
+                              Update
+                            </button>
                           </div>
                         </div>
                       </div>
