--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -248,7 +248,7 @@
                       <div class="card-body">
                         <div class="primary-map-card">
                           <p class="m-0 h5 text-center bg-light p-2 rounded-2">
-                            Calgary
+                            NO MAP
                           </p>
                           <div class="d-flex mt-3">
                             <select
