--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -4,6 +4,7 @@
       <% if (user) { %> <% if (user.role.current=="admin") { %>
       <li data-id="/admin">Admin</li>
       <%}%>
+      <li data-id="/">Home</li>
       <li data-id="/user/profile">Profile</li>
       <li data-id="/logout">Logout</li>
       <% if (locals.missions) { %>
