Home tab in User profile

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -85,7 +85,8 @@
               </tr>
             </table>
             <div class="link-container mt-3 text-center">
-              <a href="/logout" class="btn btn-danger">Logout</a>
+              <a href="/" class="btn btn-primary">Home</a>
+              <a href="/logout" class="btn ms-2 btn-danger">Logout</a>
               <% if (locals.primaryMap && primaryMap.map && primaryMap.map.id) {
               %>
               <a
