Recent Maps Front End Style

--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome - Urban Escape</title>
+    <link rel="stylesheet" href="/css/landing.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -18,7 +19,18 @@
             >Urban Escape</span
           >
         </h2>
-        <div class="d-flex mt-5">
+        <div class="history-container">
+          <div class="header">
+            <h3>Recent Maps</h3>
+          </div>
+          <div class="body">
+            <a href="#">Calgary</a>
+            <a href="#">Main Town</a>
+            <a href="#">Street Escape</a>
+            <a href="#">Gangster</a>
+          </div>
+        </div>
+        <div class="d-flex">
           <input
             id="mapId"
             class="form-control me-1"
