--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -19,17 +19,20 @@
             >Urban Escape</span
           >
         </h2>
+        <% if (locals.user && user.savedMaps && user.savedMaps.length>0) { %>
         <div class="history-container">
           <div class="header">
             <h3>Recent Maps</h3>
           </div>
           <div class="body">
-            <a href="#">Calgary</a>
-            <a href="#">Main Town</a>
-            <a href="#">Street Escape</a>
-            <a href="#">Gangster</a>
+            <% user.savedMaps.forEach(element => { %>
+            <a href="/map/<%= element.id %>"><%= element.name %></a>
+            <% }) %>
           </div>
         </div>
+        <% }else{ %>
+        <div class="my-5"></div>
+        <%}%>
         <div class="d-flex">
           <input
             id="mapId"
