--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -157,6 +157,9 @@
         </div>
       </div>
     </div>
+    <div class="currentLocationBtn" onclick="getCurrentLocation()">
+      <img src="/images/aim.svg" class="image" />
+    </div>
     <script>
       let missions=<%- JSON.stringify(missions) %>;
       let imageExists=<%- JSON.stringify(imageExist) %>;
