Added Route Delete Button

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -418,6 +418,7 @@
             </div>
           </div>
           <div class="modal-footer">
+            <button class="btn btn-danger me-auto delRouteBtn">Delete</button>
             <button
               type="button"
               class="btn btn-secondary"
