Text of Modal button Changed to 'Back To Map'

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -152,7 +152,7 @@
               architecto et eius aperiam ducimus. Ducimus, quibusdam
               repellendus? Fugit tenetur repudiandae nam.
             </p>
-            <button class="btn btn-danger w-75 infodiscart">Exit</button>
+            <button class="btn btn-danger w-75 infodiscart">Back to Map</button>
           </div>
         </div>
       </div>
