--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -95,18 +95,24 @@
     </div>
     <div class="mission-popup" style="display: none">
       <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-4">
-        <div class="mission-container">
+        <div class="mission-container rounded-1">
           <div class="popup-header">
             <h1 class="text-center title">Missions</h1>
           </div>
           <div class="popup-body">
-            <a href="javascript:voeed()" class="hideMissionsPopup">Close</a>
+            <a
+              href="javascript:voeed()"
+              class="hideMissionsPopup btn btn-primary"
+              >Close</a
+            >
             <div class="missions-list">
               <ul></ul>
             </div>
             <div class="mission-interface" style="display: none">
-              <a href="javascript:console.log();" class="backFromInterface"
-                >Back</a
+              <a
+                href="javascript:console.log();"
+                class="backFromInterface btn btn-primary mt-2"
+                >←</a
               >
               <div class="user-image-pick"></div>
             </div>
