--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -110,7 +110,7 @@
             </div>
             <div class="mission-interface" style="display: none">
               <a
-                href="javascript:console.log();"
+                href="javascript:voeed()"
                 class="backFromInterface btn btn-primary mt-2"
                 >←</a
               >
