--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -115,6 +115,12 @@
                 >←</a
               >
               <div class="user-image-pick"></div>
+              <div class="text-center placeholder-div-redeem">
+                <p class="text-danger mt-3">
+                  The Redeem button Activates after matching
+                </p>
+                <button class="btn btn-primary" disabled>REDEEM</button>
+              </div>
             </div>
             <div class="mission-selector" style="display: none">
               <a href="javascript:console.log();" class="backFromInterface"
