--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -207,7 +207,7 @@
             <div class="vj_dynamic setting">
               <div class="container mt-4">
                 <div class="row">
-                  <div class="col-xl-6">
+                  <div class="col-xl-6 my-2">
                     <div class="card">
                       <div class="card-header">
                         <h3 class="text-center m-0">Provinces</h3>
@@ -240,8 +240,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xl-6">
-                    <div class="card">
+                  <div class="col-xl-6 my-2">
+                    <div class="card h-100">
                       <div class="card-header">
                         <h3 class="m-0 text-center">Primary Map</h3>
                       </div>
@@ -262,6 +262,16 @@
                             </button>
                           </div>
                         </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xl-6 my-2">
+                    <div class="card">
+                      <div class="card-header">
+                        <h3 class="m-0 text-center">Image Management</h3>
+                      </div>
+                      <div class="card-body">
+                        <div class="managed-image row"></div>
                       </div>
                     </div>
                   </div>
