--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -165,3 +165,33 @@
 .myBtn:hover:before {
   left: -20%;
 }
+
+.managed-image .img-thumbnail:before {
+  content: "DELETE";
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  position: absolute;
+  background: linear-gradient(45deg, #ff00009e, #823000);
+  bottom: 0;
+  left: 0;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-family: sans-serif;
+  font-weight: 700;
+  letter-spacing: -13px;
+  cursor: pointer;
+  transition: 0.2s;
+  color: white;
+}
+
+.managed-image .img-thumbnail {
+  position: RELATIVE;
+}
+
+.managed-image .img-thumbnail:hover:before {
+  letter-spacing: 2px;
+  height: 100%;
+}
