--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -272,6 +272,12 @@
                       </div>
                       <div class="card-body">
                         <div class="managed-image row"></div>
+                        <button
+                          class="btn btn-danger w-100 imageCleanerBtn"
+                          style="display: none"
+                        >
+                          Delete All
+                        </button>
                       </div>
                     </div>
                   </div>
