--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -281,6 +281,35 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col-xl-6 my-2">
+                    <div class="card h-100">
+                      <div class="card-header">
+                        <h3 class="m-0 text-center">User Map Settings</h3>
+                      </div>
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col-5 text-center">
+                            <div class="user_map_marker">
+                              <img
+                                src="/images/map_marker.png"
+                                height="50px"
+                                alt="Map Marker"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-7">
+                            <div
+                              class="h-100 d-flex justify-content-center align-items-center"
+                            >
+                              <button class="btn btn-warning w-100">
+                                Change Marker
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
