Marker Upload Feature

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -293,6 +293,7 @@
                               <img
                                 src="/images/map_marker.png"
                                 height="50px"
+                                class="markerPreview"
                                 alt="Map Marker"
                               />
                             </div>
@@ -301,7 +302,9 @@
                             <div
                               class="h-100 d-flex justify-content-center align-items-center"
                             >
-                              <button class="btn btn-warning w-100">
+                              <button
+                                class="btn btn-warning w-100 uploadNewMapMarker"
+                              >
                                 Change Marker
                               </button>
                             </div>
