Serving Dynamic Image from static URL

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -291,7 +291,7 @@
                           <div class="col-5 text-center">
                             <div class="user_map_marker">
                               <img
-                                src="/images/map_marker.png"
+                                src="/admin/map/marker"
                                 height="50px"
                                 class="markerPreview"
                                 alt="Map Marker"
