Default Image setting

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -288,7 +288,7 @@
                       </div>
                       <div class="card-body">
                         <div class="row">
-                          <div class="col-5 text-center">
+                          <div class="col-3 text-center">
                             <div class="user_map_marker">
                               <img
                                 src="/admin/map/marker"
@@ -298,7 +298,7 @@
                               />
                             </div>
                           </div>
-                          <div class="col-7">
+                          <div class="col-6">
                             <div
                               class="h-100 d-flex justify-content-center align-items-center"
                             >
@@ -306,6 +306,17 @@
                                 class="btn btn-warning w-100 uploadNewMapMarker"
                               >
                                 Change Marker
+                              </button>
+                            </div>
+                          </div>
+                          <div class="col-3">
+                            <div
+                              class="h-100 d-flex justify-content-center align-items-center"
+                            >
+                              <button
+                                class="btn btn-danger w-100 deleteNewMapMarker"
+                              >
+                                Delete
                               </button>
                             </div>
                           </div>
