--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -164,7 +164,21 @@
               architecto et eius aperiam ducimus. Ducimus, quibusdam
               repellendus? Fugit tenetur repudiandae nam.
             </p>
-            <button class="btn btn-danger w-75 infodiscart">Back to Map</button>
+            <div class="row m-0 p-2 justify-content-center">
+              <div
+                class="my-2 col-sm-6 confirmCaptureContainer"
+                style="display: none"
+              >
+                <button class="btn w-100 btn-success confirmCapture">
+                  Capture
+                </button>
+              </div>
+              <div class="col-sm-6 my-2">
+                <button class="btn w-100 btn-danger infodiscart">
+                  Back to Map
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
