Import Export Images

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -324,6 +324,20 @@
                       </div>
                     </div>
                   </div>
+
+                  <div class="col-xl-6 my-2">
+                    <div class="card">
+                      <div class="card-header">
+                        <h3 class="m-0 text-center">Image Center</h3>
+                      </div>
+                      <div class="card-body">
+                        <a href="/admin/export/images" class="btn btn-success"
+                          >Export</a
+                        >
+                        <button class="btn btn-info importBTN">Import</button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
