--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -265,7 +265,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xl-6 my-2">
+                  <div class="col-xl-6 my-2 d-none">
                     <div class="card">
                       <div class="card-header">
                         <h3 class="m-0 text-center">Image Management</h3>
