Showing Learn More Button

--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -1,4 +1,4 @@
-<div class="user-navbar">
+<div class="user-navbar" style="display: none">
   <div class="navbar-container">
     <ul>
       <% if (user) { %> <% if (user.role.current=="admin") { %>
