--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -184,10 +184,10 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script>
       $(document).ready(() => {
-        $.get("/api/buttons", { name: "learn_more_btn" }, (data) => {
+        $.post("/api/buttons", { name: "learn_more_btn" }, (data) => {
           $(".user-navbar").fadeIn();
-          if (data && data.length > 0) {
-            const cstdta = data[0];
+          if (data) {
+            const cstdta = data;
             $(".link-container").append(
               `<a class='btn btn-warning ms-2' href='${cstdta.link}' target='_blank'>${cstdta.text}</a>`
             );
