Fullscreen custom button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -261,3 +261,22 @@ body {
 img {
   pointer-events: auto;
 }
+
+.fullscreen-toggle {
+  position: fixed;
+  z-index: 999;
+  right: 13px;
+  top: 13px;
+  background: #ffffff;
+  padding: 2px;
+  transition: 0.2s;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.fullscreen-toggle:hover {
+  background: #f3f3f3;
+  right: 12px;
+  top: 12px;
+  padding: 3px;
+}
