--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -19,9 +19,11 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   </head>
   <body style="margin: 0">
-    <%if(howToPlayBtn){%>
-    <input value="<%=howToPlayBtn%>" />
-    <%}%>
+    <div class="fullscreen-toggle">
+      <div class="fullscreen">
+        <img width="30px" src="/images/fullscreen.svg" id="fullscreenicon" />
+      </div>
+    </div>
     <div id="map" style="height: 100vh; width: 100vw"></div>
     <div class="simpleLoading">
       <div class="loadingAnime"></div>
