--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -175,6 +175,7 @@
                 style="display: none"
               >
                 <% if(user){ %>
+                <input type="hidden" id="isLogin" value="true" />
                 <button class="btn w-100 btn-success confirmCapture">
                   Capture
                 </button>
