--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -92,6 +92,11 @@
                     </p>
                   </div>
                 </div>
+                <div class="col-md-12 text-center mt-2">
+                  <button class="btn btn-danger hideAllPopups">
+                    Back to Map
+                  </button>
+                </div>
               </div>
             </div>
           </div>
