Dir FrontEnd  Rendering and Backend

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -396,6 +396,47 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col-12 my-2">
+                    <div class="card">
+                      <div class="card-header">
+                        <h3 class="text-center m-0">Badge Manager</h3>
+                      </div>
+                      <div class="card-body bg-light">
+                        <div class="fileManagerBody">
+                          <div class="loader text-center p-5">
+                            <span class="fa fa-spinner fa-spin fa-3x"></span>
+                          </div>
+                          <div class="dirs" style="display: none">
+                            <form class="new-dir m-0 p-0">
+                              <div class="row">
+                                <div class="col-9">
+                                  <input
+                                    type="text"
+                                    required
+                                    id="dirName"
+                                    placeholder="Enter Folder Name"
+                                    class="form-control"
+                                  />
+                                </div>
+                                <div class="col-3">
+                                  <button class="btn btn-success w-100">
+                                    Create New
+                                  </button>
+                                </div>
+                              </div>
+                            </form>
+                            <hr />
+                            <div
+                              class="dir-container bg-white my-2 p-3 rounded-2"
+                            >
+                              <div class="row"></div>
+                            </div>
+                          </div>
+                          <div class="files" style="display: none"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
