--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -432,7 +432,22 @@
                               <div class="row"></div>
                             </div>
                           </div>
-                          <div class="files" style="display: none"></div>
+                          <div
+                            class="files px-2 py-3 bg-white rounded-2"
+                            style="display: none"
+                          >
+                            <div
+                              class="controllers mb-2 p-2 bg-light text-center rounded-2"
+                            >
+                              <button class="btn btn-info">
+                                <span class="fa fa-arrow-left"></span>
+                              </button>
+                              <button class="btn btn-danger ms-2">
+                                <span class="fa fa-trash"></span>
+                              </button>
+                            </div>
+                            <div class="file-container"></div>
+                          </div>
                         </div>
                       </div>
                     </div>
